# Sorting

./: CMakeLists.txt  main.cpp  othcet.odt  sort.txt
include/: sorting.hpp
sources/: sorting.cpp
tests/: test.cpp
